packages/webassemblyjs/test/fixtures/type-errors/call-wrong-return/module.wast
(module 
  (func (param i32) (result i32))
  (func (result f32)
    (call 0)
  )
)
